Fix line-height and text-align

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ h1 {
     text-align: center;
     font-size: 35px;
     font-weight: 700;
-    line-height: 130%;
+    line-height: 1.3;
     color: #000;
 }
 h2 {
@@ -146,7 +146,7 @@ h2 {
     text-align: center;
     font-size: 28px;
     font-weight: 700;
-    line-height: 130%;
+    line-height: 1.3;
     color: #000;
 }
 h3 {
@@ -154,14 +154,12 @@ h3 {
     text-align: center;
     font-size: 25px;
     font-weight: 700;
-    line-height: 130%;
+    line-height: 1.3;
     color: #000;
 }
 p {
     margin-bottom: 30px;
-    text-align: justify;
     font-size: 16px;
-    line-height: 120%;
 }
 p:last-child {
     margin-bottom: 0;
@@ -250,7 +248,7 @@ header {
 header p {
     text-align: center;
     font-size: 15px;
-    line-height: 130%;
+    line-height: 1.3;
     color: #000;
 }
 @media (min-width: 768px) {
